[package]
name = "linux-loader"
version = "0.1.0"
authors = ["cathy <cathy.zhang@intel.com>"]
edition = "2018"
license = "Apache-2.0 AND BSD-3-Clause"

[features]
default = ["elf"]
elf = []
bzImage = []

[dependencies.vm-memory]
git = "https://github.com/sboeuf/vm-memory"
branch = "add_fd_support"
features = ["backend-mmap"]
